--- a/mini-apps/package.json
+++ b/mini-apps/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "gatsby": "^2.15.11",
     "gatsby-image": "^2.2.17",
-    "gatsby-plugin-manifest": "^2.2.15",
+    "gatsby-plugin-manifest": "^2.2.21",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sharp": "^2.2.20",
@@ -16,7 +16,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-select": "^3.0.8"
   },
   "devDependencies": {
     "gh-pages": "^2.1.1",
